# world

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  README.md
configs/: LoginServer.ini  log_config.xml  world_db.ini
cpr/: CTestTestfile.cmake
cpr/cpr/: CTestTestfile.cmake
cpr/opt/: CTestTestfile.cmake
cpr/test/: CTestTestfile.cmake
devtools/PacketParser/: Parser DB.sql  Readme.txt  parse all.bat  parser_db.ini
distrib/: DISTRIB.bat  readme.txt
docs/: ChangeLog.txt  Client_Versions.xlsx  Notes about World.sln.txt  Opcodes_List_2005.txt  ToDo.txt  bonus table.html  charactersheet_struct.txt  opcodes.sql  pull type chance.html
source/LUA/: LUALibx64.lib  LUALibx64_debug.lib  LUALibx64_release.lib  Zlibx64_debug.lib  Zlibx64_release.lib
source/WorldServer/: Appearances.h  ClientPacketFunctions.cpp  ClientPacketFunctions.h  Combat.cpp  Combat.h  Entity.cpp  Entity.h  Factions.cpp  Factions.h  GroundSpawn.cpp  GroundSpawn.h  Languages.cpp  Languages.h  LoginServer.cpp  LoginServer.h  LuaFunctions.cpp  LuaFunctions.h  LuaInterface.cpp  LuaInterface.h  MasterServer.cpp  MasterServer.h  MutexHelper.h  MutexList.h  MutexMap.h  MutexVector.h  NPC.cpp  NPC.h  NPC_AI.cpp  NPC_AI.h  Object.cpp  Object.h  PVP.cpp  PVP.h  Player.cpp  Player.h  PlayerGroups.cpp  PlayerGroups.h  Quests.cpp  Quests.h  Sign.cpp  (+37 more)
source/common/: CRC16.cpp  CRC16.h  Common_Defines.h  Condition.cpp  Condition.h  ConfigReader.cpp  ConfigReader.h  (+64 more)
structs/: CommonStructs.xml  EQ2_Structs.xml  ItemStructs.xml  SpawnStructs.xml  WorldStructs.xml
win/: EQ2WorldVC10.sln
(+173 files in other folders)
